# zno-explorer

./: .gitignore  Dockerfile  requirements.txt
zno-explorer-backend/: .gitignore  install-detectron.sh  pyproject.toml  start.sh
zno-explorer-backend/backend/: detect_zoom.py  detectron_predictor.py  enhance_original.py  main.py
zno-explorer-frontend/: build.ps1  index.html  package-lock.json  package.json
zno-explorer-frontend/src/: 3d.jsx  App.jsx  App_.jsx  GalleryState.jsx  ImageUpload.jsx  Stats.jsx  histogram.jsx
